Alignment issues fixed

--- a/src/index-one.css
+++ b/src/index-one.css
@@ -2,16 +2,13 @@
     background-color: rgb(227, 230, 227);
     font-size: 13px;
     font-family:Georgia, 'Times New Roman', Times, serif;
-    padding: 0.9%;
+    padding: 1%;
     border-radius: 0%;
-    padding-right: 1%;
-    
 
 }
 .container{
 
-    height: 440px;
-	width: 350px;
+	
 	background-color: white;
 	box-shadow: 5px 5px 5px 5px  rgb(170, 169, 169);
 	position: relative;
@@ -21,36 +18,37 @@
     
 }
 .nav{
-    text-align: center;
-    padding-left: -7%;
     font-size: 11px;
     font-family:Georgia, 'Times New Roman', Times, serif;
-    padding-top: 0.8%;
+    padding-top: 0.5%;
     border-color: rgb(255, 255, 255);
     border-radius: 0%;
     padding-bottom: none;
     border-color: rgb(255, 255, 255);
     border-width: 0;
-    position: relative;
 
+}
 
+.endspace{
+    padding-left: 11.5%;
 }
 
 .nav-link{
     color:rgb(0, 0, 0);
     padding-bottom: 0%;
     border-width: 0;
-    padding-right: 0.2%;
-
+    padding-right: 1%;
 }
 
 
+
+
 .padding{
-    padding-left: 10%;
     padding-bottom: 0%;
     font-size: 20px;
-    padding-right: 8%;
     border: 0;
+    color: black;
+
 
 }
 
@@ -59,13 +57,7 @@
 
 }
 
-body{
-    border: 0;
-}
 
-.stay{
-    color: black;
-}
 
 form{
     width: 60%;
@@ -120,11 +112,10 @@ footer{
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-size: 11px;
     padding-top: 0%;
-    position: absolute;
     bottom:0px;
     width: 100%;
-    margin-left: -22.65%;
- 
+    position: absolute;
+    margin-left: 0.8%;
 }
 
 text-end{
@@ -135,8 +126,7 @@ text-end{
     color:rgb(250, 250, 250);
     padding-bottom: 0%;
     border-width: 0;
-    padding-left: 2%;
-    padding-right: 45%;
+
 }
 
 
@@ -144,7 +134,7 @@ text-end{
     color:rgb(250, 250, 250);
     padding-bottom: 0%;
     border-width: 0;
-    padding-right: 1.5%;
+
 }
 
 small{
