--- a/src/studentServices.css
+++ b/src/studentServices.css
@@ -1,71 +1,74 @@
 
 .cardone{
-    width: 36.5%;
-    padding-top: 2%;
-    padding-left: 3%;
+    width: 50%;
 }
 
 .one{
 background-color:rgb(246, 165, 138) ;
+height: 80%;
 }
 
 .cardtwo{
-    width: 38%;
-    padding-left: 2.5%;
-    padding-top: 2%;
+    width: 25%;
 }
 
 .two{
     background-color: rgb(232, 104, 90);
+    height: 100%;
 }
 
 .cardthree{
-    width: 38%;
-    margin-left: -17.5%;
-    padding-top: 2%;
+    width: 25%;
 }
 
 .three{
     background-color: rgb(161, 81, 80);
+    height: 100%;
 }
 
 .cardfour{
-    width: 33%;
-    padding-left: 3%;
-    margin-top: -3.5%;
+    width: 25%;
+    margin-top: -3%;
+    
 }
 
 .four{
     background-color: rgb(218, 166, 62);
+    height: 100%;
 }
 
 .cardfive{
-    width: 33%;
-    margin-left: -14%;
-    margin-top: -3.5%;
+    width: 25%;
+    margin-top: -3%;
+
 }
 
 .five{
     background-color: rgb(240, 202, 211);
+    height: 100%;
 }
 
 .cardsix{
-    width: 39%;
-    margin-left: -13%;
-    padding-top: 3%;
+    padding: 3.5%;
+    
 }
 
 .six{
     background-color: rgb(111, 157, 167);
+    height: 115%;
 }
 
-.divmain{
-    margin-left: 16%;
-    margin-top: -1%;
+
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+    height:100vh;
+    width: 170vh;
 
 }
 
-.bd{
-	height: 90vh;
-	width: 99vw;
+
+button{
+    display: flex;
 }
